# GhillieSuite-EX

./: .env.example  .gitignore  README.md  pyproject.toml  scope_example.txt  setup_hunter_tools.sh  test_triage.py
ghilliesuite_ex/: __init__.py  arsenal.py  config.py  main.py  patch_agents.py  patch_arsenal.py  patch_main.py  patch_waf_engine.py  safety.py  waf_engine.py
ghilliesuite_ex/agents/: __init__.py  base.py  exploit.py  exploit_approval.py  exploit_targets.py  recon.py  recon_pipeline.py  reporter.py  supervisor.py
ghilliesuite_ex/resources/: common_dirs.txt
ghilliesuite_ex/state/: __init__.py  db.py  models.py
ghilliesuite_ex/templates/: cors-misconfig.yaml  cors-null-origin.yaml  crlf-injection.yaml  error-page-disclosure.yaml  exposed-backup-files.yaml  exposed-env-file.yaml  exposed-git-config.yaml  exposed-swagger-api-docs.yaml  graphql-introspection.yaml  host-header-injection.yaml  jwt-none-algorithm.yaml  open-redirect.yaml  security-headers-missing.yaml  spring-actuator-exposure.yaml  wordpress-debug-log.yaml
ghilliesuite_ex/utils/: __init__.py  cve_fetcher.py  executor.py  html_compactor.py  nuclei.py  parsers.py  redaction.py  reporter.py  run_metadata.py  scope.py  ui.py
hcli/: __init__.py  arsenal.py  config.py  main.py
hcli/agents/: __init__.py  base.py  exploit.py  recon.py  reporter.py  supervisor.py
hcli/state/: __init__.py  db.py  models.py
hcli/utils/: __init__.py  cve_fetcher.py  executor.py  parsers.py  scope.py  ui.py
tests/: test_cli_smoke.py  test_config_runtime.py  test_execution_profiles.py  test_executor_contract.py  test_exploit_helpers.py  test_exploit_high_signal.py  test_ffuf_runtime_hardening.py  test_nuclei_command.py  test_poc_utils.py  test_recon_pipeline.py  test_run_metadata.py  test_safety_hardening.py  test_safety_policy.py  test_scope.py  test_services_db.py  test_tool_parsers.py  test_tooling_status.py
tmp/: patch_nuclei.py  verify_cookies.py  verify_mutation.py
