[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GhillieSuite-EX"
version = "0.1.0"
description = "AI-automated Bug Bounty Orchestrator for HackerOne — multi-agent, async, scope-enforced."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GhillieSuite-EX" }]
keywords = ["bugbounty", "pentest", "security", "ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "google-generativeai>=0.7",
    "openai>=1.30",
    "httpx[http2]>=0.27",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
    "nest-asyncio>=1.5",
    "playwright>=1.43",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
]

[project.scripts]
# Install with:  pip install -e .
# Run with:      GhillieSuite-EX.sec hunt --target example.com --scope scope.txt
"GhillieSuite-EX.sec" = "ghilliesuite_ex.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghilliesuite_ex*"]

[tool.setuptools.package-data]
"ghilliesuite_ex" = ["py.typed"]
